# DRA

./: .env.example  .env.o3  .env.o4-mini  .gitignore  CHANGELOG.md  INSTALL.md  README.md  USAGE.md  data_ingestion_agent.py  deep_research_agent.py  lint.sh  logger.py  prompts.txt  pyproject.toml  requirements.txt  run.sh  run_data_ingestion.sh  setup-macos.sh  setup.sh  utils.py
my-docs/: introduction.txt
openworkspace-o1-docs/: example.txt
openworkspace-o1-docs/property-investment/: example.txt
openworkspace-o1-reports/: GenAI HR.MD  Gold Price 2025 Prediction.MD  Selling GH5.md
openworkspace-o1-vecs/faiss_index_property-investment/: index.faiss  index.pkl
prompts/: prompts.txt
