[project]
name = "dra"
version = "0.12.9"
description = "DRA Project"
authors = ["Kenny Dizi <chitrung09t2@gmail.com>"]
requires-python = ">=3.9,<3.13"
dependencies = [
    "openai==1.75.0",
    "anthropic==0.49.0",
    "tiktoken==0.9.0",
    "gpt-researcher==0.12.19",
    "unstructured-client==0.33.0",
    "unstructured==0.17.2",
    "unstructured-inference==0.8.10",
    "langchain-unstructured==0.1.6",
    "langchain-core==0.3.54",
    "langchain==0.3.23",
    "langchain-community==0.3.21",
    "langchain-deepseek==0.1.3",
    "langchain-openai==0.3.14",
    "langchain-anthropic==0.3.12",
    "tavily-python==0.5.4",
    "firecrawl-py==2.1.2",
    "networkx==3.4.2",
    "langchain-text-splitters==0.3.8",
    "python-dotenv==1.1.0",
    "faiss-cpu==1.10.0",
    "markdown-it-py==3.0.0",
    "numpy==2.2.5",
    "ruff==0.11.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"