[project]
name = "dra"
version = "0.14.1"
description = "DRA Project"
authors = ["Kenny Dizi <chitrung09t2@gmail.com>"]
requires-python = ">=3.9,<3.13"
dependencies = [
    "openai==1.95.0",
    "anthropic==0.57.1",
    "tiktoken==0.9.0",
    "gpt-researcher==0.14.1",
    "unstructured-client==0.38.1",
    "unstructured==0.18.3",
    "unstructured-inference==1.0.5",
    "langchain-unstructured==0.1.6",
    "langchain-core==0.3.68",
    "langchain==0.3.26",
    "langchain-community==0.3.27",
    "langchain-deepseek==0.1.3",
    "langchain-openai==0.3.27",
    "langchain-anthropic==0.3.17",
    "tavily-python==0.7.9",
    "firecrawl-py==2.15.0",
    "networkx==3.5",
    "langchain-text-splitters==0.3.8",
    "python-dotenv==1.1.1",
    "faiss-cpu==1.11.0",
    "markdown-it-py==3.0.0",
    "numpy==2.3.1",
    "ruff==0.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"